--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ejs2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,6 +25,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "process": "^0.11.10",
+    "pusher": "^5.2.0",
     "sequelize": "^6.37.3",
     "sonner": "^1.4.41",
     "uuid": "^9.0.1"
