--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
@@ -20,15 +21,19 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
     "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "process": "^0.11.10",
     "pusher": "^5.2.0",
+    "query-string": "^9.0.0",
     "sequelize": "^6.37.3",
     "sonner": "^1.4.41",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.2"
