--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-redis": "C:\\reddis\\redis-server.exe",
-    "start": "concurrently \"npm run start-redis\" \"nodemon app.js\"",
+    "start": "nodemon app.js",
     "stop-redis": "killall redis-server"
   },
   "keywords": [],
@@ -29,7 +29,7 @@
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.0",
+    "nodemon": "^3.1.1",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-github": "^1.1.0",
@@ -42,12 +42,15 @@
     "query-string": "^9.0.0",
     "redis": "^4.6.14",
     "sequelize": "^6.37.3",
+    "socket.io": "^4.7.5",
     "sonner": "^1.4.41",
     "uuid": "^9.0.1",
+    "ws": "^8.17.0",
     "zlib": "^1.0.5"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
+    "ejs-lint": "^2.0.0",
     "sequelize-cli": "^6.6.2"
   }
 }
